hphp/hack/test/typecheck/shape_key_exists2.php.exp
File "shape_key_exists2.php", line 8, characters 19-21:
Invalid argument (Typing[4140])
File "shape_key_exists2.php", line 7, characters 15-15:
The field 'y' is missing
